sync .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,14 @@
+# rebind 'C-b' to 'C-\'
+set-option -g prefix 'C-\'
+unbind-key C-b
+bind-key 'C-\' send-prefix
+
+# enable mouse
+set-option -g mouse on
+
+# truecolor support
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+
 # set fish as default shell if available
 # install by linux package manager
 if-shell 'test -e /usr/bin/fish' {
