sync .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,8 +6,25 @@ bind-key 'C-\' send-prefix
 # enable mouse
 set-option -g mouse on
 
+# adjust the repeat time
+set-option -g repeat-time 0
+
+# adjust the escape time
+set-option -g escape-time 50
+
+# auto window rename
+set-option -g automatic-rename on
+
 # truecolor support
 set-option -ga terminal-overrides ",xterm-256color:Tc"
+
+# set the index start from 1
+# to match keyboard shortcuts
+set-option -g base-index 1
+set-window-option -g pane-base-index 1
+
+# renumber windows after closing one of them
+set-option -g renumber-windows on
 
 # set fish as default shell if available
 # install by linux package manager
@@ -19,3 +36,30 @@ if-shell 'test -e /usr/bin/fish' {
 if-shell 'test -e /usr/local/bin/fish' {
   set-option -g default-shell /usr/local/bin/fish
 }
+
+# moving between panes
+bind-key -r h select-pane -L
+bind-key -r j select-pane -D
+bind-key -r k select-pane -U
+bind-key -r l select-pane -R
+
+# closing 
+bind-key x kill-pane
+bind-key X kill-window
+
+# status bar
+set-option -g status on
+set-option -g status-interval 1
+set-option -g status-position top
+set-option -g status-justify left
+
+# resize panes with vim movement keys
+bind-key -r H resize-pane -L 5
+bind-key -r J resize-pane -D 5
+bind-key -r K resize-pane -U 5
+bind-key -r L resize-pane -R 5
+
+# splitting panes with current path
+bind-key c new-window -c "#{pane_current_path}"
+bind-key % split-window -h -c "#{pane_current_path}"
+bind-key '"' split-window -v -c "#{pane_current_path}"
